# water-and-sanitation-planner

./: .gitignore  README.md  pyproject.toml  report.md  run_streamlit.ps1
src/water_sanitation_crew/: crew.py  main.py  streamlit_app.py
src/water_sanitation_crew/config/: agents.yaml  tasks.yaml
