[project]
name = "water_sanitation_crew"
version = "0.1.0"
description = "water_sanitation_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "streamlit>=1.32.0,<2.0.0"
]

[project.scripts]
water_sanitation_crew = "water_sanitation_crew.main:run"
run_crew = "water_sanitation_crew.main:run"
train = "water_sanitation_crew.main:train"
replay = "water_sanitation_crew.main:replay"
test = "water_sanitation_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
